# stormstat

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: generate_sample.py  sample_data.csv
examples/: quickstart.ipynb  quickstart.py
stormstat/: __init__.py  cli.py  core.py  visual.py
stormstat/tests/: test_core.py
