[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stormstat-deda2367"
version = "0.1.0"
description = "Surface weather station statistics and visualization toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Demi Davoll", email = "deda2367@colorado.edu"}
]
keywords = ["meteorology", "weather", "climate", "statistics", "atmosphere"]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[project.scripts]
stormstat = "stormstat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stormstat*"]